- Added support from Java 1.9